  buffer overflow, which could be exploited to achieve escalated
  privileges.  This flaw was introduced in glibc 2.34.

  CVE-2025-0395: When the assert() function fails, it does not allocate
  enough space for the assertion failure message string and size
  information, which may lead to a buffer overflow if the message string
  size aligns to page size.

The following bugs are resolved with this release:

  [12154] Do not fail DNS resolution for CNAMEs which are not host names
  [20975] Deferred cancellation triggers in __check_pf and looses lock leading to deadlock
  [24816] Fix tst-nss-files-hosts-long on single-stack hosts
  [27576] gmon: improve mcount overflow handling
  [27821] ungetc: Fix backup buffer leak on program exit
  [28846] CMSG_NXTHDR may trigger -Wstrict-overflow warning
  [29039] Corrupt DTV after reuse of a TLS module ID following dlclose with unused TLS
  [29444] gmon: Fix allocated buffer overflow (bug 29444)
  [29864] libc: __libc_start_main() should obtain program headers
    address (_dl_phdr) from the auxv, not the ELF header.
  [29305] Conserve NSS buffer space during DNS packet parsing
  [29402] nscd: nscd: No such file or directory
  [29415] nscd: Fix netlink cache invalidation if epoll is used
  [28937] New DSO dependency sorter does not put new map first if in a cycle
  [29446] _dlopen now ignores dl_caller argument in static mode
  [29485] Linux: Terminate subprocess on late failure in tst-pidfd
  [29490] alpha: New __brk_call implementation is broken
  [29463] math/test-float128-y1 fails on x86_64
  [29488] test-ibm128-llround fails on ppc64el when built with gcc-12 and -O2
    or higher
  [29528] elf: Call __libc_early_init for reused namespaces
  [29537] libc: [2.34 regression]: Alignment issue on m68k when using
  [29539] libc: LD_TRACE_LOADED_OBJECTS changed how vDSO library are
  [29576] build: librtld.os: in function `_dl_start_profile':
    (.text+0x9444): undefined reference to `strcpy'